app/assets/stylesheets/base.scss
$lightblue: #29ABE2;
$darkblue: #154D65;

*{
  font-family: "essonnes-text";
  font-weight:400;
  box-sizing: border-box;
}

html{
  position:relative;
  min-height:100%;
}

body{
  margin:0 0 15vh;
}

h1{
  font-size:16px;
  text-transform:lowercase;
  margin:0 auto;
  font-family: "acier-bat-noir";
}

h2{
  font-size:16px;
  text-transform:lowercase;
  margin:0 auto;
  font-family: "acier-bat-solid";
}

p{
  font-size:12px;
}

a, a:focus, a:active, a:visited{
  color:black;
  font-family: 'acier-bat-solid';
}
  

.parsley-errors-list{
   padding:10px 0; 
}

.bdp-btn{
  display: inline-block;
  padding: 3px 3px 3px 5px;

  color: black;
  text-decoration: none;
  background:white;
  text-transform: uppercase;
  font-weight: bold;
  letter-spacing: 1.6px;
  &:visited{
    color:black;
  }
  &:hover{
    color:black;
  }
  &:active, &:focus{
    color:black;
  };
}

.bdp-btn span.icon{
  position:relative;
  top:-1px;
}

